RESOLVED FIXED122517
[MediaStream] Fix segfault in initializeMockSources()
https://bugs.webkit.org/show_bug.cgi?id=122517
Summary [MediaStream] Fix segfault in initializeMockSources()
Lauro Moura Maranhao Neto
Reported 2013-10-08 12:47:33 PDT
MockMediaStreamCenter.cpp initializeMockSources() tries to add a RefPtr<MockSource> to a HashMap by releasing it and also access a member function (id) in the same call. If the release() is evaluated before id(), a segfault occurs.
Attachments
Patch (2.27 KB, patch)
2013-10-08 12:52 PDT, Lauro Moura Maranhao Neto
no flags
Lauro Moura Maranhao Neto
Comment 1 2013-10-08 12:52:42 PDT
WebKit Commit Bot
Comment 2 2013-10-08 13:29:10 PDT
Comment on attachment 213709 [details] Patch Clearing flags on attachment: 213709 Committed r157132: <http://trac.webkit.org/changeset/157132>
WebKit Commit Bot
Comment 3 2013-10-08 13:29:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.