[MediaStream] Fix segfault in initializeMockSources() https://bugs.webkit.org/show_bug.cgi?id=122517

Reviewed by Darin Adler.

Calling release() and a member function on the same RefPtr
as arguments to a function can lead to segfaults if the release
call is evaluated first.

* platform/mock/MockMediaStreamCenter.cpp:
(WebCore::initializeMockSources):


Canonical link: https://commits.webkit.org/140601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157132 268f45cc-cd09-0410-ab3c-d52691b4dbfc